add deploy script

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:image" content="/social-preview.png" />
 
     <link rel="apple-touch-icon" href="/logo.png" />
-    <title>Markatplace</title>
+    <title>Panther 9 Auctions</title>
   </head>
   <body>
     <div id="root"></div>
